# integrity_verifier

./: CMakeLists.txt  File_Integrity_Checker.org  process.org
docs/: File_Integrity_Checker.org  process.org
include/: FileInfo.h  IntegrityCore.h  status_out.h
src/: CMakeLists.txt  IntegrityCore.cc  RecordMode.cc  main.cpp  status_out.cc
tests/: CMakeLists.txt  IntegrityCoreTest.cc  RecordModeTest.cc  TestHelpers.cc  TestHelpers.h
tests/include/: TestHelpers.h
